style.css
/* Color Theme Swatches in Hex */
.black-text { color: #222026; }
.header-background { color: #31594E; }
.sidebar-background { color: #8DA693; }
.main-background { color: #D9D4BA; }
.highlight-color { color: #D9734E; }

@font-face {
    font-family: 'tgl';
    src: local('tgl 0-17'),
         url('tgl017-lp2q-webfont.woff2') format('woff2'),
         url('tgl017-lp2q-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

body {
    font-family: 'Courier', monospace;
    margin: 0;
    padding: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

header {
    background: #31594e;
    padding: 20px;
    /* display: flex;
    align-items: flex-start; */
    gap: 40px;
}

a {
    color: #D9734E;
}

a:hover {
    color: #efa387;
}

a:visited {
    color: #712f18;
}

.head {
    display: flex;
    /* flex-direction: column; */
    /* width: 1000px; */
}

.head h1,
.head h2,
.head p {
    color: #fff;
    margin: 0;
}

.head h1 {
    font-family: 'Century Gothic', Helvetica, Arial, sans-serif;
    font-size: 4.5em;
}

.head h2 {
    font-family: tgl, Helvetica, Arial, sans-serif;
    font-size: 1em;
    margin-bottom: 10px;
}

.head a {
    flex: 25%;
}

.title {
    display: flex;
    border: 3px solid #fff;
    /* padding: 0px 100px; */
    flex-direction: column;
    align-items: center;
    flex: 75%;
    justify-content: center;
}
img.logo {
    /* width: 100px; */
    height: 114px;
    margin: 0 75px;
}

img.title {
    /* width: 629.302px; */
    height: 100px;
}

.main {
    display: flex;
    background-color: #d9d4ba;
}

.nav {
    display: flex;
    padding: 10px;
    width: 250px;
    background-color: #8da693;
    flex-direction: column;
    align-items: center;
    flex: 25%;
}

.body-text {
    flex: 75%;
    display: flex;
    margin: 1em 3em;
    color: #222026;
    gap: 30px;
    margin-left: 30px;
}

.body-text img {
    height: 269.415px;
    /* width: 150px; */
}

.article {
    display: flex;
    flex-direction: column;
    width: 100%;
    min-height: 100vh;
}

.nav a {
    text-decoration: none;
    color: #fff;
    font-size: 16pt;
    margin: 0;
}
.nav a:hover {
    text-decoration: underline;
}

.nav ol {
    list-style: upper-roman;
    /* margin-left: 3em; */
    color: #fff;
}

.nav ol li {
    margin-bottom: 10px;
}

.nav img {
    width: 100px;
    height: 107px;
    opacity: 0.7;
    border: 1px solid;
    padding: 10px 50px;
}

/* h1 {
    font-size: 75pt;
    margin-bottom: 0;
}
h1, h2 {
    font-family: "Helvetica", sans-serif;
} */

.main h1, 
.main h2 {
    font-family: 'Courier', monospace;
    margin: 0;
}

.main h1 {
    font-size: 35pt;
}

.main h2 {
    font-size: 20pt;
}

.contact {
    min-height: 100vh;
    flex-direction: column;
    align-items: center;
}

.contact-body {
    width: 100%;
}

.info {
    flex-wrap: wrap;
    align-content: flex-start;
    flex-direction: row;
}

.info img {
    height: 600px;
}
footer {
    background-color: #d9734e;
    text-align: center;
    position: sticky;
    width: 100%;
    bottom: 0px;
}

@media screen and (max-width: 955px) {
    .head h1 {
        font-size: 4em;
    }
    img.logo {
        margin: 0 60px;
    }
}

@media screen and (max-width: 875px) {
    .head h1 {
        font-size: 3.5em;
    }
    img.logo {
        margin: 0 45px;
    }
    .info img {
        height: 350px;
    }
}

@media screen and (max-width: 750px) {
    .head h1 {
        font-size: 3em;
    }
    img.logo {
        margin: 0 30px;
    }
    .body-text {
        flex-direction: column-reverse;
        align-items: center;
    }
    .contact {
        flex-direction: column;
    }
    .info img {
        height: 300px;
    }
}

@media screen and (max-width: 670px) {
    .head h1 {
        font-size: 2em;
    }
    img.logo {
        margin: 0 30px;
        height: 85px;
    }
    .body-text {
        flex-direction: column-reverse;
        align-items: center;
    }
    .nav img {
        height: 57px;
        width: 50px;
    }
    .main h1 {
        font-size: 20pt;
    }
    .info img {
        height: 250px;
    }
}

@media screen and (max-width: 530px) {
    .head h2 {
        font-size: 0.5em;
    }
    .nav a {
        font-size: 14pt;
    }
    .info img {
        height: 200px;
    }
}

@media screen and (max-width: 495px) {
    .head {
        flex-direction: column;
        align-items: center;
        gap: 10px;
    }
    .head h1 {
        font-size: 2.5em;
        text-align: center;
        width: 400px;
    }
    .head h2 {
        text-align: center;
    }
    .info img {
        height: 100px;
    }
}

@media screen and (max-width: 415px) {
    .head h1 {
        font-size: 1.5em;
        width: 320px;
    }
    .main h1 {
        font-size: 16pt;
    }
}

